@@ -1,8 +1,7 @@
 Package: beachmat
-Version: 2.23.1
-Date: 2024-11-11
+Version: 2.23.2
+Date: 2024-11-24
 Title: Compiling Bioconductor to Handle Each Matrix Type
-Encoding: UTF-8
 Authors@R: c(person("Aaron", "Lun", role = c("aut", "cre"), email = "infinite.monkeys.with.keyboards@gmail.com"),
         person("Hervé", "Pagès", role="aut"),
         person("Mike", "Smith", role="aut"))
@@ -38,3 +37,4 @@ SystemRequirements: C++17
 URL: https://github.com/tatami-inc/beachmat
 BugReports: https://github.com/tatami-inc/beachmat/issues
 RoxygenNote: 7.3.2
+Encoding: UTF-8
